// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches last snapshot loading 1`] = `<Loading />`;

exports[`matches last snapshot loggedIn 1`] = `
<VersionCheck
  updateType={undefined}
>
  <Connect(LoggedInRoot) />
</VersionCheck>
`;

exports[`matches last snapshot not loggedIn 1`] = `
<VersionCheck
  updateType={undefined}
>
  <LoginNavigator />
</VersionCheck>
`;

exports[`matches last snapshot pending 1`] = `<Loading />`;

exports[`updateModal matches last snapshot with a forced version update 1`] = `
<VersionCheck
  updateType="force"
>
  <LoginNavigator />
</VersionCheck>
`;

exports[`updateModal matches last snapshot with a suggested version update 1`] = `
<VersionCheck
  updateType="suggest"
>
  <LoginNavigator />
</VersionCheck>
`;
